--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix=/bc/
 spring.mvc.view.suffix=.html
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://database-hippy.ceqk46sjv9sv.ap-northeast-2.rds.amazonaws.com:3306/?user=admin
-#spring.datasource.username=user1
-#spring.datasource.password=skhuA+4.5
+spring.datasource.username=admin
+spring.datasource.password=project0412!
 server.port=8088
 spring.web.resources.static-locations=classpath:static/
